@@ -1,3 +1,10 @@
+2005-01-08 07:18 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* InnerSpaceController.m: Added code to select the module name.
+	* InnerSpace.gorm: Replaced the browser and reconnected.
+	* NickSpace.bproj/NickSpaceView.m: Changed code to thicken the
+	lines draw so that they are erased completely.
+
 2005-01-07 00:26 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GNUmakefile: Added NickSpace.
